--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <div class="card">
         <div class="search">
-            <input type="text" placeholder="Search" class="search-bar">
+            <input type="text" placeholder="Search" class="search-bar" autocomplete="off">
             <button>
                 <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 1024 1024" height="1em"
                     width="1.5em" xmlns="http://www.w3.org/2000/svg">
